[gd_scene load_steps=4 format=3 uid="uid://eykue0t8lfnr"]

[ext_resource type="Script" path="res://card.gd" id="1_nrfa4"]
[ext_resource type="Texture2D" uid="uid://bf8vkvfc0iqx7" path="res://Resources/base_1.png" id="2_8nibc"]
[ext_resource type="Texture2D" uid="uid://8j6dl8l5ihe2" path="res://Resources/logo_1.png" id="3_kqo1k"]

[node name="card" type="Node2D"]
script = ExtResource("1_nrfa4")

[node name="base" type="Sprite2D" parent="."]
modulate = Color(0.454902, 0.454902, 0.454902, 1)
position = Vector2(-17.5, 42.25)
scale = Vector2(1.16393, 1.36266)
texture = ExtResource("2_8nibc")

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(-77, -68)
texture = ExtResource("3_kqo1k")

[node name="name" type="Label" parent="."]
offset_left = -38.0
offset_top = -100.0
offset_right = 81.0
offset_bottom = -34.0
text = "Assassin's Game XD"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true
uppercase = true

[node name="graphics" type="Label" parent="."]
offset_left = -81.0
offset_top = -24.0
offset_bottom = -1.0
text = "Graphics : "
metadata/_edit_use_anchors_ = true

[node name="graphics_bar" type="ProgressBar" parent="."]
offset_top = -24.0
offset_right = 80.0
offset_bottom = 3.0
value = 20.0
metadata/_edit_use_anchors_ = true

[node name="gameplay" type="Label" parent="."]
offset_left = -82.0
offset_top = 10.0
offset_bottom = 33.0
text = "Gamplay : "
metadata/_edit_use_anchors_ = true

[node name="gameplay_bar" type="ProgressBar" parent="."]
offset_top = 8.0
offset_right = 80.0
offset_bottom = 35.0
value = 20.0
metadata/_edit_use_anchors_ = true

[node name="sound" type="Label" parent="."]
offset_left = -63.0
offset_top = 41.0
offset_right = 18.0
offset_bottom = 64.0
text = "Sound : "
metadata/_edit_use_anchors_ = true

[node name="sound_bar" type="ProgressBar" parent="."]
offset_top = 39.0
offset_right = 80.0
offset_bottom = 66.0
value = 20.0
metadata/_edit_use_anchors_ = true

[node name="story" type="Label" parent="."]
offset_left = -55.0
offset_top = 71.0
offset_right = 26.0
offset_bottom = 94.0
text = "Story : "
metadata/_edit_use_anchors_ = true

[node name="story_bar" type="ProgressBar" parent="."]
offset_top = 70.0
offset_right = 80.0
offset_bottom = 97.0
value = 20.0
metadata/_edit_use_anchors_ = true

[node name="compatiblity" type="Label" parent="."]
offset_left = -113.0
offset_top = 102.0
offset_right = -1.0
offset_bottom = 125.0
text = "Compatiblity : "
metadata/_edit_use_anchors_ = true

[node name="compatiblity_bar" type="ProgressBar" parent="."]
offset_top = 101.0
offset_right = 80.0
offset_bottom = 128.0
value = 20.0
metadata/_edit_use_anchors_ = true

[node name="marketing" type="Label" parent="."]
offset_left = -92.0
offset_top = 134.0
offset_bottom = 157.0
text = "Marketing : "
metadata/_edit_use_anchors_ = true

[node name="marketing_bar" type="ProgressBar" parent="."]
offset_top = 132.0
offset_right = 80.0
offset_bottom = 159.0
value = 20.0
metadata/_edit_use_anchors_ = true

[node name="overall" type="Label" parent="."]
offset_left = -68.0
offset_top = 164.0
offset_right = 13.0
offset_bottom = 187.0
text = "Overall : "
metadata/_edit_use_anchors_ = true

[node name="overall_bar" type="ProgressBar" parent="."]
offset_top = 163.0
offset_right = 80.0
offset_bottom = 190.0
value = 20.0
metadata/_edit_use_anchors_ = true
